Exercice 5i et ii faits (pas corrigés)
